<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:androidprv="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory>
        <PreferenceCategory androidprv:title="@string/Ui" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="blur_enabled"
            android:summary="@string/blur_enabled_summary"
            android:title="@string/blur_enabled" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="clipboard_editor"
            android:summary="@string/app_shade_summary"
            android:title="@string/app_shade" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key=""
            android:summary="@string/clipboard_editor_summary"
            android:title="@string/clipboard_editor" />
        <PreferenceCategory androidprv:title="@string/Vibrator" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="back_vibrator"
            android:summary="@string/back_vibrator_summary"
            android:title="@string/back_vibrator" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="cipher_disk_vibrator"
            android:summary="@string/cipher_disk_vibrator_summary"
            android:title="@string/cipher_disk_vibrator" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="face_vibrator"
            android:summary="@string/face_vibrator_summary"
            android:title="@string/face_vibrator" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="finger_vibrator"
            android:summary="@string/finger_vibrator_summary"
            android:title="@string/finger_vibrator" />
        <PreferenceCategory androidprv:title="@string/Charge" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="battery_protect"
            android:summary="@string/battery_protect_summary"
            android:title="@string/battery_protect" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="hs_power"
            android:summary="@string/hs_power_summary"
            android:title="@string/hs_power" />
        <PreferenceCategory androidprv:title="@string/Fingerprint" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="finger_unlock"
            android:summary="@string/finger_unlock_summary"
            android:title="@string/finger_unlock" />
        <PreferenceCategory androidprv:title="@string/about_us" />
        <Preference
            android:icon="@drawable/about_xph"
            android:title="@string/about_xph">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/XPHXPHL" />
        </Preference>
        <Preference
            android:icon="@drawable/about_yukonga"
            android:title="@string/about_yukonga">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/YuKongA" />
        </Preference>
        <Preference
            android:icon="@drawable/about_ex3124"
            android:title="@string/about_ex3124"/>
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/EX3124" />
        <Preference
            android:icon="@drawable/about_creamdraft"
            android:title="@string/about_creamdraft">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/Cheng171" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>