<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory>
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="back_vibrator"
            android:summary="@string/back_vibrator_summary"
            android:title="@string/back_vibrator" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="cipher_disk_vibrator"
            android:summary="@string/cipher_disk_vibrator_summary"
            android:title="@string/cipher_disk_vibrator" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="face_vibrator"
            android:summary="@string/face_vibrator_summary"
            android:title="@string/face_vibrator" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="finger_vibrator"
            android:summary="@string/finger_vibrator_summary"
            android:title="@string/finger_vibrator" />
    </PreferenceCategory>
</PreferenceScreen>